Added initial experiments for mailing, which won't work until 2.1 upgrade.