@@ -7,8 +7,6 @@ object ApplicationBuild extends Build {
   val appName = "docview"
   val appVersion = "1.0-SNAPSHOT"
 
-  javaOptions in (Test,run) += "-XX:MaxPermSize=1024m"
-
   val appDependencies = Seq(
     // Add your project dependencies here
     "jp.t2v" %% "play20.auth" % "0.4-SNAPSHOT",
@@ -17,6 +15,7 @@ object ApplicationBuild extends Build {
     "org.neo4j.app" % "neo4j-server" % "1.8" classifier "static-web" classifier "",
     "postgresql" % "postgresql" % "9.1-901.jdbc4",
     "joda-time" % "joda-time" % "2.1",
+    //"com.typesafe" % "play-plugins-mailer_2.10" % "2.1-SNAPSHOT",
     "ehri-project" % "ehri-frames" % "0.1-SNAPSHOT" % "test" classifier "tests" classifier "",
     "ehri-project" % "ehri-plugin" % "0.0.1-SNAPSHOT" % "test" classifier "tests" classifier "",
     "ehri-project" % "ehri-extension" % "0.0.1-SNAPSHOT" % "test" classifier "tests" classifier "")
